Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2
-
Fix Version/s: 10.2.9
-
Component/s: Storage Engine - InnoDB
-
Labels:None
Description
perl ./mtr --mysqld=--loose-innodb-sync-debug
|
Over a hundred tests fail with several different assertion failures. Here is the list of the tests that failed on my machine (excluding those that failed on different reasons):
binlog_encryption.rpl_parallel
|
binlog_encryption.rpl_mixed_binlog_max_cache_size
|
federated.federated_transactions
|
multi_source.gtid_ignore_duplicates
|
rpl.rpl_ddl
|
rpl.rpl_innodb_mixed_dml
|
rpl.rpl_mixed_binlog_max_cache_size
|
rpl.rpl_drop_db_fail
|
rpl.rpl_gtid_crash
|
rpl.rpl_gtid_mdev4484
|
rpl.rpl_gtid_until
|
rpl.rpl_multi_engine
|
rpl.rpl_parallel
|
rpl.rpl_parallel_optimistic
|
rpl.rpl_read_only
|
rpl.rpl_truncate_3innodb
|
rpl.rpl_row_create_table
|
rpl.rpl_row_tabledefs_3innodb
|
rpl.rpl_old_master
|
rpl.rpl_gtid_strict
|
rpl.rpl_stm_binlog_max_cache_size
|
rpl.rpl_stm_stop_middle_group
|
binlog.flashback
|
binlog.binlog_row_mix_innodb_myisam
|
binlog.binlog_mysqlbinlog_row_trans
|
main-test_sql_discovery.mdl_sync
|
binlog.binlog_stm_mix_innodb_myisam
|
main.mdl_sync
|
main.partition_innodb_semi_consistent
|
innodb.innodb-16k
|
encryption.innodb_encrypt_log_corruption
|
encryption.innodb-bad-key-change
|
encryption.innodb_onlinealter_encryption
|
innodb.101_compatibility
|
innodb_zip.restart
|
innodb.truncate_purge_debug
|
main.commit_1innodb
|
main.sp_trans
|
parts.partition_debug_sync_innodb
|
innodb_fts.innodb-fts-stopword
|
innodb_fts.create
|
parts.partition_mgm_lc1_innodb
|
tokudb.truncate_txn_rollback_innodb
|
mroonga/wrapper.truncate
|
main.statistics_index_crash-7362
|
gcol.gcol_update
|
gcol.innodb_virtual_blob
|
gcol.innodb_virtual_index
|
handler.innodb
|
innodb.autoinc_persist
|
innodb.ibuf_not_empty
|
innodb.innodb-get-fk
|
gcol.innodb_virtual_basic
|
mariabackup.xb_fulltext_encrypted
|
main.innodb_mysql_sync
|
main.partition_explicit_prune
|
main.truncate-stale-6500
|
parts.partition_auto_increment_innodb
|
parts.partition_engine_innodb
|
innodb.innodb-truncate
|
innodb.innodb_blob_truncate
|
parts.partition_mgm_lc0_innodb
|
innodb.innodb_bug34300
|
innodb.innodb_bug38231
|
innodb.innodb_force_recovery
|
innodb.innodb_stats
|
innodb.log_corruption
|
innodb.read_only_recovery
|
innodb_fts.fulltext_multi
|
innodb_fts.fulltext_order_by
|
innodb_fts.fulltext_update
|
innodb_fts.fulltext_var
|
main.alter_table
|
innodb_fts.innodb-fts-basic
|
main.alter_table_trans
|
innodb_fts.innodb-fts-ddl
|
innodb_fts.innodb_fts_large_records
|
innodb_fts.innodb_fts_misc_1
|
innodb_fts.innodb_fts_multiple_index
|
innodb_fts.innodb_fts_plugin
|
innodb_fts.innodb-fts-fic
|
innodb_fts.innodb_fts_proximity
|
innodb_fts.innodb_fts_misc
|
innodb_fts.innodb_fts_stopword_charset
|
innodb_fts.innodb_fts_result_cache_limit
|
innodb_fts.innodb_fts_transaction
|
innodb_fts.misc_debug
|
main.commit
|
main.auto_increment_ranges_innodb
|
sys_vars.foreign_key_checks_func
|
innodb.row_format_redundant
|
vcol.vcol_ins_upd_innodb
|
innodb.temporary_table
|
innodb.tmpdir
|
innodb.truncate_debug
|
main.loaddata_autocom_innodb
|
innodb_fts.crash_recovery
|
innodb_fts.fulltext
|
innodb_fts.fulltext2
|
innodb_fts.fulltext_cache
|
innodb_fts.fulltext_distinct
|
innodb_fts.fulltext_left_join
|
innodb_fts.fulltext_misc
|
perfschema.innodb_table_io
|
I will put the assertion failures in the comment, to make them searchable for future, it might be helpful.
Apart from straightforward test failures, there are lots of reports
Errors/warnings were found in logfiles during server shutdown after running the
|
following sequence(s) of tests:
|
Mostly they're related to tests already mentioned among failures, so its side-effects, but possibly not all of them. The set needs to be re-run for catching those after the failures themselves have been fixed.
Attachments
Issue Links
- relates to
-
MDEV-11634 Improve the InnoDB change buffer
-
- Open
-
-
MDEV-13093 Leak of Datafile::m_crypt_info on shutdown after failed startup
-
- Closed
-
-
MDEV-13614 Allow --innodb-read-only startup even when change buffer or redo logs are not empty
-
- Closed
-
-
MDEV-13637 InnoDB change buffer housekeeping can cause redo log overrun and possibly deadlocks
-
- Closed
-
-
MDEV-13684 InnoDB race condition between fil_crypt_thread and btr_scrub_init
-
- Closed
-
-
MDEV-25267 Reported latching order violation in ibuf_remove_free_page()
-
- Open
-
-
MDEV-9843 InnoDB hangs on startup between "InnoDB: Apply batch completed" and "rollback segment(s) are active", various tests fail sporadically in buildbot on p8-rhel6-bintar-debug
-
- Closed
-
-
MDEV-12898 encryption.innodb-redo-badkey failed in buildbot, server hung on startup
-
- Closed
-
-
MDEV-14441 InnoDB hangs when setting innodb_adaptive_hash_index=OFF during UPDATE
-
- Closed
-